crates/solidity-v2/testing/snapshots/semantic_output/functions/multiple_mutability_keywords/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Only a single mutability keyword can be provided. Found `ViewKeyword` after `PureKeyword`.
   ╭─[input.sol:2:32]
   │
 2 │     function foo() public pure view returns (uint) {
   │                                ──┬─  
   │                                  ╰─── Error occurred here.
───╯Error: Only a single mutability keyword can be provided. Found `ViewKeyword` after `PureKeyword`.
   ╭─[input.sol:6:53]
   │
 6 │     function withCallback(function () external pure view returns (uint) cb) public {}
   │                                                     ──┬─  
   │                                                       ╰─── Error occurred here.
───╯
------------------------------------------------------------------------

Definitions (4):
- Def: #1 ["Test" @ input.sol:1:10] (contract)
- Def: #2 ["foo" @ input.sol:2:14] (function, type: function () returns uint256)
- Def: #3 ["withCallback" @ input.sol:6:14] (function, type: function (function () returns uint256) returns void)
- Def: #4 ["cb" @ input.sol:6:73] (parameter, type: function () returns uint256)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function foo() public pure view returns (uint) {
   │              ─┬─  
   │               ╰─── name: 2
   │ 
 6 │     function withCallback(function () external pure view returns (uint) cb) public {}
   │              ──────┬─────                                               ─┬  
   │                    ╰──────────────────────────────────────────────────────── name: 3
   │                                                                          │  
   │                                                                          ╰── name: 4
───╯
